--- a/buy.html
+++ b/buy.html
@@ -1,20 +1,20 @@
 ﻿<html lang="ru">
 <head>
-	<title>Redust Client — Лучший софт для Minecraft</title>
+	<title>Sense Client — Лучший софт для Minecraft</title>
 	
-	<meta name="author" content="REDUST CLIENT">
+	<meta name="author" content="SENSE CLIENT">
 	<meta name="robots" content="index,follow">
 	<meta name="keywords" content="Кс го, mine craft, майн, csgo, cs:go, redust, redust project, редаст, редаст чит, новый чит, лучший чит, Чит для MINE, читы майн, чит на майн">
 	<meta name="description" content="Приватный чит для Minecraft, с большим функционалом.">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<meta content="Redust Client - Приватный чит для Minecraft" name="og:title">
-	<meta content="Redust Client - Приватный чит для Minecraft" name="vk:title">
-	<meta content="Redust Client - Приватный чит для Minecraft" itemprop="name">
-	<meta content="Redust Client - Приватный чит для Minecraft" name="twitter:title">
+	<meta content="Sense Client - Приватный чит для Minecraft" name="og:title">
+	<meta content="Sense Client - Приватный чит для Minecraft" name="vk:title">
+	<meta content="Sense Client - Приватный чит для Minecraft" itemprop="name">
+	<meta content="Sense Client - Приватный чит для Minecraft" name="twitter:title">
 	<meta content="майн читы,чит майн,скачать читы майн,читы майн вх,чит майн вх,скачать чит +на майн,читы майн 2021,чит майн 2021,читы аим майн,фикс читы майн,чит команды майн,читы майн приват,скачать чит +на майн вх,легит читы майн" name="keywords">
-	<meta content="Redust - Лучший в своем роде чит для Minecraft. Уникальный и современный интерфейс с выбором языка и темы меню. Большое количество необходимых функций и интересных дополнений: валлхак с полным обходом записи на видео и стримах, плавный легит аимбот, жёсткий рейдж аимбот, уникальный инвентарь ченджер с кейсами, медалями и любыми скинами в инвентаре, профиль ченджер с возможностью поставить любое звание, легит анти-аимы и функции для лобби! Чит предоставит Вам полное преимущество над вашими противниками и точно не оставит Вас равнодушным! Становитесь богом CS:GO прямо сейчас!" name="description" property="description">
+	<meta content="Sense - Лучший в своем роде чит для Minecraft. Уникальный и современный интерфейс с выбором языка и темы меню. Большое количество необходимых функций и интересных дополнений: валлхак с полным обходом записи на видео и стримах, плавный легит аимбот, жёсткий рейдж аимбот, уникальный инвентарь ченджер с кейсами, медалями и любыми скинами в инвентаре, профиль ченджер с возможностью поставить любое звание, легит анти-аимы и функции для лобби! Чит предоставит Вам полное преимущество над вашими противниками и точно не оставит Вас равнодушным! Становитесь богом CS:GO прямо сейчас!" name="description" property="description">
 	<link rel="stylesheet" href="main/templates/css/bootstrap_v2.css?1">
 	<link rel="stylesheet" href="main/templates/css/styles_v2.css?1">
 	<link data-n-head="true" rel="icon" type="image/x-icon" href="main/templates/img/icon.ico">
